; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_preshader.c_regstore_set_values.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_preshader.c_regstore_set_values.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }
%struct.d3dx_regstore = type { i32** }

@table_info = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.d3dx_regstore*, i32, i8*, i32, i32)* @regstore_set_values to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @regstore_set_values(%struct.d3dx_regstore* %0, i32 %1, i8* %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.d3dx_regstore*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  store %struct.d3dx_regstore* %0, %struct.d3dx_regstore** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %14 = load %struct.d3dx_regstore*, %struct.d3dx_regstore** %6, align 8
  %15 = getelementptr inbounds %struct.d3dx_regstore, %struct.d3dx_regstore* %14, i32 0, i32 0
  %16 = load i32**, i32*** %15, align 8
  %17 = load i32, i32* %7, align 4
  %18 = zext i32 %17 to i64
  %19 = getelementptr inbounds i32*, i32** %16, i64 %18
  %20 = load i32*, i32** %19, align 8
  store i32* %20, i32** %11, align 8
  %21 = load i8*, i8** %8, align 8
  %22 = bitcast i8* %21 to i32*
  store i32* %22, i32** %12, align 8
  %23 = load i32, i32* %9, align 4
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** @table_info, align 8
  %25 = load i32, i32* %7, align 4
  %26 = zext i32 %25 to i64
  %27 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i64 %26
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = mul i32 %23, %29
  %31 = load i32*, i32** %11, align 8
  %32 = zext i32 %30 to i64
  %33 = getelementptr inbounds i32, i32* %31, i64 %32
  store i32* %33, i32** %11, align 8
  %34 = load i32, i32* %10, align 4
  %35 = load %struct.TYPE_2__*, %struct.TYPE_2__** @table_info, align 8
  %36 = load i32, i32* %7, align 4
  %37 = zext i32 %36 to i64
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %35, i64 %37
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 0
  %40 = load i32, i32* %39, align 4
  %41 = mul i32 %34, %40
  store i32 %41, i32* %13, align 4
  %42 = load i32*, i32** %12, align 8
  %43 = load i32*, i32** %11, align 8
  %44 = icmp ult i32* %42, %43
  br i1 %44, label %45, label %55

45:                                               ; preds = %5
  %46 = load i32, i32* %13, align 4
  %47 = zext i32 %46 to i64
  %48 = load i32*, i32** %11, align 8
  %49 = load i32*, i32** %12, align 8
  %50 = ptrtoint i32* %48 to i64
  %51 = ptrtoint i32* %49 to i64
  %52 = sub i64 %50, %51
  %53 = sdiv exact i64 %52, 4
  %54 = icmp sle i64 %47, %53
  br i1 %54, label %71, label %55

55:                                               ; preds = %45, %5
  %56 = load i32*, i32** %12, align 8
  %57 = load i32*, i32** %11, align 8
  %58 = icmp ugt i32* %56, %57
  br i1 %58, label %59, label %69

59:                                               ; preds = %55
  %60 = load i32, i32* %13, align 4
  %61 = zext i32 %60 to i64
  %62 = load i32*, i32** %12, align 8
  %63 = load i32*, i32** %11, align 8
  %64 = ptrtoint i32* %62 to i64
  %65 = ptrtoint i32* %63 to i64
  %66 = sub i64 %64, %65
  %67 = sdiv exact i64 %66, 4
  %68 = icmp sle i64 %61, %67
  br label %69

69:                                               ; preds = %59, %55
  %70 = phi i1 [ false, %55 ], [ %68, %59 ]
  br label %71

71:                                               ; preds = %69, %45
  %72 = phi i1 [ true, %45 ], [ %70, %69 ]
  %73 = zext i1 %72 to i32
  %74 = call i32 @assert(i32 %73)
  %75 = load i32*, i32** %11, align 8
  %76 = load i32*, i32** %12, align 8
  %77 = load i32, i32* %13, align 4
  %78 = call i32 @memcpy(i32* %75, i32* %76, i32 %77)
  ret void
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @memcpy(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
